--- a/index.html
+++ b/index.html
@@ -11,56 +11,57 @@
     <div class="canvas">
         <!----------------------------LEFT COLUMN------------------------------------>
         <div class="left_column">
-            <div class = "left_column_top_box">
-                <div class = left_column_top_box_top_row>
-                    <div class = "left_column_top_box_top_row_column1"></div>
-                    <div class = "left_column_top_box_top_row_column2"></div>
+            <div class="left_column_top_box">
+                <div class=left_column_top_box_top_row>
+                    <div class="left_column_top_box_top_row_column1"></div>
+                    <div class="left_column_top_box_top_row_column2"></div>
                 </div>
-                <div class = left_column_top_box_bottom_row>
-                    <div class = "left_column_top_box_bottom_row_left_container">
-                        <div class = "left_column_top_box_bottom_row_left_column"></div>
-                        <div class = "left_column_top_box_bottom_row_right_column"></div>
+                <div class=left_column_top_box_bottom_row>
+                    <div class="left_column_top_box_bottom_row_left_container">
+                        <div class="left_column_top_box_bottom_row_left_column"></div>
+                        <div class="left_column_top_box_bottom_row_right_column"></div>
                     </div>
-                    <div class = "left_column_top_box_bottom_row_bigbox"></div>
+                    <div class="left_column_top_box_bottom_row_bigbox"></div>
                 </div>
             </div>
-            <div class = "left_column_bottom_box">
-                 <div class = "left_column_bottom_box_top_row">
-                        <div class = "left_column_bottom_box_top_row_LEFT">
-                                <div class = "left_column_bottom_box_top_row_TOP"></div>
-                                <div class = "left_column_bottom_box_top_row_BOTTOM"></div>
-                        </div>
-                        <div class = "left_column_bottom_box_top_row_CENTER"></div>
-                        <div class = "left_column_bottom_box_top_row_RIGHT">
-                                <div class = "left_column_bottom_box_bottom_row_TOP1"></div>
-                                <div class = "left_column_bottom_box_bottom_row_BOTTOM1"></div>
-                        </div>
-                       </div>
-
-                 <div class = "left_column_bottom_box_bottom_row">
-                    <div class ="left_column_bottom_box_bottom_row_left_column">
-                            <div class ="left_column_bottom_box_bottom_row_left_column_TOP_ROW">
-                                <div class ="left_column_bottom_box_bottom_row_left_column_LEFT"></div>
-                                <div class ="left_column_bottom_box_bottom_row_left_column_RIGHT"></div>
-                                </div>  
-                            <div class = "left_column_bottom_box_bottom_row_left_column_BOTTOM"></div>
+            <div class="left_column_bottom_box">
+                <div class="left_column_bottom_box_top_row">
+                    <div class="left_column_bottom_box_top_row_LEFT">
+                        <div class="left_column_bottom_box_top_row_TOP"></div>
+                        <div class="left_column_bottom_box_top_row_BOTTOM"></div>
                     </div>
-                    <div class ="left_column_bottom_box_bottom_row_right_column"> 
-                        <div class ="left_column_bottom_box_bottom_row_right_column_TOP"></div>
-                        <div class ="left_column_bottom_box_bottom_row_right_column_BOTTOM">
-                                <div class ="left_column_bottom_box_bottom_row_right_column_LEFT"></div>
-                                <div class ="left_column_bottom_box_bottom_row_right_column_RIGHT"></div>
+                    <div class="left_column_bottom_box_top_row_CENTER"></div>
+                    <div class="left_column_bottom_box_top_row_RIGHT">
+                        <div class="left_column_bottom_box_bottom_row_TOP1"></div>
+                        <div class="left_column_bottom_box_bottom_row_BOTTOM1"></div>
+                    </div>
+                </div>
+
+                <div class="left_column_bottom_box_bottom_row">
+                    <div class="left_column_bottom_box_bottom_row_left_column">
+                        <div class="left_column_bottom_box_bottom_row_left_column_TOP_ROW">
+                            <div class="left_column_bottom_box_bottom_row_left_column_LEFT"></div>
+                            <div class="left_column_bottom_box_bottom_row_left_column_RIGHT"></div>
+                        </div>
+                        <div class="left_column_bottom_box_bottom_row_left_column_BOTTOM"></div>
+                    </div>
+                    <div class="left_column_bottom_box_bottom_row_right_column">
+                        <div class="left_column_bottom_box_bottom_row_right_column_TOP"></div>
+                        <div class="left_column_bottom_box_bottom_row_right_column_BOTTOM">
+                            <div class="left_column_bottom_box_bottom_row_right_column_LEFT"></div>
+                            <div class="left_column_bottom_box_bottom_row_right_column_RIGHT"></div>
                         </div>
 
                     </div>
 
 
-                 </div>
+                </div>
             </div>
 
 
 
-        </div> <!--- end left column-->
+        </div>
+        <!--- end left column-->
 
         <!----------------------------MIDDLE COLUMN------------------------------------>
         <div class="middle_column">
@@ -114,11 +115,65 @@
             </div>
         </div>
 
+        <!-----------------RIGHT COLUMN----------->
+        <div class="right_column">
+            <div class="right_column_top_box">
+                <div class="right_column_top_box_left_column">
+                    <div class="right_column_top_box_left_column_top_box">
+                        <div class="right_column_top_box_left_column_top_box_RIGHT_SQUARE"></div>
+                        <div class="right_column_top_box_left_column_top_box_LEFT_SQUARE"></div>
+                    </div>
+                    <div class="right_column_top_box_left_column_bottom_box">
+                        <div class="right_column_top_box_left_column_top_box_ONE"></div>
+                        <div class="right_column_top_box_left_column_top_box_TWO"></div>
+                        <div class="right_column_top_box_left_column_top_box_THREE"></div>
+                        <div class="right_column_top_box_left_column_top_box_FOUR"></div>
+                    </div>
+                </div>
+                <div class="right_column_top_box_right_column">
+                    <div class="right_column_top_box_right_column_TOP_BOX"></div>
+                    <div class="right_column_top_box_right_column_column_container">
+                        <div class="right_column_top_box_right_column_LEFT_COLUMN">
+                            <div class="right_column_top_box_right_column_LEFT_COMLUMN_LEFT_TOP_BOX"></div>
+                            <div class="right_column_top_box_right_column_LEFT_COMLUMN_LEFT_BOTTOM_BOX"></div>
+                        </div>
+                        <div class="right_column_top_box_right_column_RIGHT_COLUMN">
+                            <div class="right_column_top_box_right_column_RIGHT_COLUMN_TOP_BOX"></div>
+                            <div class="right_column_top_box_right_column_RIGHT_COLUMN_BOTTOM_BOX"></div>
+                        </div>
+                    </div>
 
-        <div class="right_column"></div>
+                </div>
+
+            </div>
+            <!--END RIGHT COLUMN TOP BOX-->
+
+
+
+
+
+
+            <!-- ----------BOTTOM BOX---------- -->
+            <div class="right_column_bottom_box">
+                <div class = "right_column_bottom_box_column_CONTAINER">
+                    <div class = "right_column_bottom_box_left_column_bigSquare"></div>
+                    <div class = "right_column_bottom_box_right_column">
+                        <div class = right_column_bottom_box_right_column_TOP></div>
+                        <div class = right_column_bottom_box_right_column_BOTTOM></div>
+                    </div>
+                </div>
+                <div class = "right_column_bottom_box_bottom_row">
+                    <div class = "right_column_bottom_box_bottom_row_left"></div>
+                    <div class = "right_column_bottom_box_bottom_row_right"></div>
+                </div>
+            </div>
+
+
+
+        </div>
 
     </div>
 
 
 </body>
-
+</html>
